Một số màn hình mới

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -15,7 +15,7 @@
   <li class="nav-item active">
     <a class="nav-link" href="/">
       <i class="fas fa-fw fa-tachometer-alt"></i>
-      <span>Dashboard</span></a>
+      <span>Thông tin chung</span></a>
   </li>
 
   <!-- Divider -->
@@ -35,7 +35,7 @@
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
       <div class="bg-white py-2 collapse-inner rounded">
         {{!-- <h6 class="collapse-header">Custom Components:</h6> --}}
-        <a class="collapse-item" href="">Thời khoá biểu</a>
+        <a class="collapse-item" href="/schedule">Thời khoá biểu</a>
         <a class="collapse-item" href="">Lịch thi</a>
         <a class="collapse-item" href="">Kết quả học tập</a>
       </div>
@@ -56,7 +56,6 @@
         <a class="collapse-item" href="">Thi học kì</a>
         <a class="collapse-item" href="">Khảo sát</a>
         <a class="collapse-item" href="">Điều chỉnh thông tin</a>
-        <a class="collapse-item" href="">Thời khoá biểu</a>
       </div>
     </div>
   </li>
