--- a/views/staff/studentTable.hbs
+++ b/views/staff/studentTable.hbs
@@ -21,8 +21,8 @@
                         <td>61</td>
                         <td>2011/04/25</td>
                         <td>$320,800</td>
-                        <td><i class="fa fa-pencil-square-o" data-toggle="modal" data-target="#modalLoginForm"
-                                aria-hidden="true"></i></td>
+                        <td><i class="fa fa-pencil-square-o" data-toggle="modal" data-target="#modalEditStudent"
+                                aria-hidden="true"></i></td>    
                     </tr>
 
                 </tbody>
@@ -30,7 +30,8 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+
+<div class="modal fade" id="modalEditStudent" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
