--- a/views/student/resultTable.hbs
+++ b/views/student/resultTable.hbs
@@ -1,3 +1,12 @@
+<div class="row">
+    <div class="semester ml-2 mb-2">
+        <p style="text-align:center; vertical-align:middle; line-height:2rem; color:black">Năm học: 2019-2020</p>
+    </div>
+    <div class="semester ml-2 mb-2">
+        <p style="text-align:center; vertical-align:middle; line-height:2rem; color: black">Học kì: 2</p>
+    </div>
+</div>
+
 <div class="card shadow mb-4">
     <div class="card-body">
         <div class="table-responsive">
@@ -6,8 +15,6 @@
                     <tr>
                         <th>TÊN HỌC SINH</th>
                         <th>MÔN HỌC</th>
-                        <th>HỌC KÌ</th>
-                        <th>NĂM HỌC</th>
                         <th>15 PHÚT</th>
                         <th>1 TIẾT</th>
                         <th>THI CUỐI KÌ</th>
@@ -18,8 +25,6 @@
                     <tr>
                         <td>Nguyễn Văn A</td>
                         <td>Toán</td>
-                        <td>1</td>
-                        <td>2019-2020</td>
                         <td>10</td>
                         <td>9.5</td>
                         <td>9.5</td>
