--- a/public/css/styleTable.css
+++ b/public/css/styleTable.css
@@ -4,3 +4,14 @@
 .md-form .form-control {
     width: 60% !important;
 }
+.fa {
+    color: red;
+}
+
+.semester {
+    border-radius: 10px; 
+    height: 2rem;
+    padding: 0 5px;
+    background-color: #4e73df;
+    display: inline-block;
+}
