--- a/views/student/schedule.hbs
+++ b/views/student/schedule.hbs
@@ -1,3 +1,11 @@
+<div class="row">
+    <div class="semester ml-2 mb-2">
+        <p style="text-align:center; vertical-align:middle; line-height:2rem; color:black">Năm học: 2019-2020</p>
+    </div>
+    <div class="semester ml-2 mb-2">
+        <p style="text-align:center; vertical-align:middle; line-height:2rem; color: black">Học kì: 2</p>
+    </div>
+</div>
 <div id="table">
   <div class="row" id="days" >
     <div class="day">TIẾT</div>
