Login, logout, checkLogin

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -46,7 +46,7 @@
             <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                 class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
           </div>
-        {{{body}}}
+          {{{body}}}
           <!-- Content Row -->
           <div class="row">
           </div>
@@ -84,7 +84,7 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
+          <a class="btn btn-primary" href="/login/logout">Logout</a>
         </div>
       </div>
     </div>
