--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -82,7 +82,7 @@
   <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePrincipal" aria-expanded="true"
       aria-controls="collapsePrincipal">
-      <span>Hiệu trưởng</span>
+      <span>Admin</span>
     </a>
     <div id="collapsePrincipal" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
       <div class="bg-white py-2 collapse-inner rounded">
