--- a/views/staff/classTable.hbs
+++ b/views/staff/classTable.hbs
@@ -1,12 +1,3 @@
-<div class="row">
-    <div class="semester ml-2 mb-2">
-        <p style="text-align:center; vertical-align:middle; line-height:2rem; color:black">Năm học: 2019-2020</p>
-    </div>
-    <div class="semester ml-2 mb-2">
-        <p style="text-align:center; vertical-align:middle; line-height:2rem; color: black">Học kì: 2</p>
-    </div>
-</div>
-
 <div class="card shadow mb-4">
     <div class="card-body">
         <div class="table-responsive">
@@ -17,7 +8,7 @@
                         <th>MÃ GVCN</th>
                         <th>TÊN GVCN</th>
                         <th>PHÒNG HỌC</th>
-                        <th>NGÀY LẬP</th>   
+                        <th>NGÀY LẬP</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -34,12 +25,14 @@
 
                 </tbody>
             </table>
+            <div class="text-center">
+                <a href="" class="btn btn-primary btn-rounded mb-4" data-toggle="modal"
+                    data-target="#modalAddClass">Thêm lớp học</a>
+            </div>
         </div>
     </div>
 </div>
-<div class="text-center">
-  <a href="" class="btn btn-primary btn-rounded mb-4" data-toggle="modal" data-target="#modalAddClass">Thêm lớp học</a>
-</div>
+
 <div class="modal fade" id="modalEditClass" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -58,17 +51,17 @@
 
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-teacherID">Mã GVCN</label>
-                    <input type="text" id="defaultForm-teacherID" class="form-control validate">                
+                    <input type="text" id="defaultForm-teacherID" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-roomID">Mã phòng</label>
-                    <input type="text" id="defaultForm-roomID" class="form-control validate">                
+                    <input type="text" id="defaultForm-roomID" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-startDate">Ngày bắt đầu</label>
-                    <input type="text" id="defaultForm-startDate" class="form-control validate">                
+                    <input type="text" id="defaultForm-startDate" class="form-control validate">
                 </div>
-                
+
 
             </div>
             <div class="modal-footer d-flex justify-content-center">
@@ -95,17 +88,17 @@
 
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-teacherID">Mã GVCN</label>
-                    <input type="text" id="defaultForm-teacherID" class="form-control validate">                
+                    <input type="text" id="defaultForm-teacherID" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-roomID">Mã phòng</label>
-                    <input type="text" id="defaultForm-roomID" class="form-control validate">                
+                    <input type="text" id="defaultForm-roomID" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-startDate">Ngày bắt đầu</label>
-                    <input type="text" id="defaultForm-startDate" class="form-control validate">                
+                    <input type="text" id="defaultForm-startDate" class="form-control validate">
                 </div>
-                
+
 
             </div>
             <div class="modal-footer d-flex justify-content-center">
