--- a/views/staff/examRoomTable.hbs
+++ b/views/staff/examRoomTable.hbs
@@ -1,10 +1,16 @@
 <div class="row">
     <div class="semester ml-2 mb-2">
-        <p style="text-align:center; vertical-align:middle; line-height:2rem; color:black">Năm học: 2019-2020</p>
+        <p class="labelSemester">Năm học: 2019-2020</p>
     </div>
-    <div class="semester ml-2 mb-2">
-        <p style="text-align:center; vertical-align:middle; line-height:2rem; color: black">Học kì: 2</p>
-    </div>
+    <form class="semester labelSemester ml-2 mb-2" action="./" method="GET">
+        <div align="center">
+            <span>Học kì:</span>
+            <select class="semester" style="border: none; color:blanchedalmond" name="state" onchange="this.form.submit();">
+                <option value="1">1</option>
+                <option value="2">2</option>
+            </select>
+        </div>
+    </form>
 </div>
 <div class="card shadow mb-4">
     <div class="card-body">
