--- a/views/staff/examRoom_studentListTable.hbs
+++ b/views/staff/examRoom_studentListTable.hbs
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="semester ml-2 mb-2">
-        <p style="text-align:center; vertical-align:middle; line-height:2rem; color:black">Năm học: 2019-2020</p>
+        <p class="labelSemester">Năm học: 2019-2020</p>
     </div>
     <div class="semester ml-2 mb-2">
-        <p style="text-align:center; vertical-align:middle; line-height:2rem; color: black">Học kì: 2</p>
+        <p class="labelSemester">Học kì: 2</p>
     </div>
     <div class="semester ml-2 mb-2">
         <p style="text-align:center; vertical-align:middle; line-height:2rem; color: black">Mã phòng: A101</p>
