--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,6 +1,9 @@
 <div class="container emp-profile">
     <form method="post">
-        <div class="row">
+        {{#profile user}}{{/profile}}
+
+
+        {{!-- <div class="row">
             <div class="col-md-4">
                 <div class="profile-img">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog"
@@ -14,12 +17,11 @@
             <div class="col-md-6">
                 <div class="profile-head">
                     <h5>
-                        {{user.fullName}}
+                        user.fullName
                     </h5>
                     <h6>
-                        {{user.className}}
+                        user.className
                     </h6>
-                    {{!-- <p class="proile-rating">Điểm TB : <span>8/10</span></p> --}}
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
@@ -31,8 +33,8 @@
             <div class="col-md-2">
                 <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile" />
             </div>
-        </div>
-        <div class="row">
+        </div> --}}
+        {{!-- <div class="row">
             <div class="col-md-2">
             </div>
             <div class="col-md-8">
@@ -51,7 +53,7 @@
                                 <label>Họ và tên</label>
                             </div>
                             <div class="col-md-6">
-                                <p>{{user.fullName}}</p>
+                                <p>user.fullName</p>
                             </div>
                         </div>
                         <div class="row">
@@ -82,6 +84,6 @@
 
                 </div>
             </div>
-        </div>
+        </div> --}}
     </form>
 </div>
