--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -14,7 +14,7 @@
 
   <!-- Custom styles for this template-->
   {{#each style}}
-        <link rel="stylesheet" href="../css/{{this}}">
+  <link rel="stylesheet" href="../css/{{this}}">
   {{/each}}
   <link rel="stylesheet" href="../css/sb-admin-2.min.css">
   <link href="../vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
@@ -78,15 +78,15 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Đăng xuất</h5>
           <button class="close" type="button" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
           </button>
         </div>
-        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+        <div class="modal-body">Bạn muốn đăng xuất?</div>
         <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="/login/logout">Logout</a>
+          <button class="btn btn-secondary" type="button" data-dismiss="modal">Hủy</button>
+          <a class="btn btn-primary" href="/login/logout">Xác nhận</a>
         </div>
       </div>
     </div>
