--- a/views/staff/examRoomTable.hbs
+++ b/views/staff/examRoomTable.hbs
@@ -2,7 +2,7 @@
     <div class="semester ml-2 mb-2">
         <p class="labelSemester">Năm học: 2019-2020</p>
     </div>
-    <form class="semester labelSemester ml-2 mb-2" action="./" method="GET">
+    <form class="semester labelSemester ml-2 mb-2" action="" method="GET">
         <div align="center">
             <span>Học kì:</span>
             <select class="semester" style="border: none; color:blanchedalmond" name="state" onchange="this.form.submit();">
