--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -46,6 +46,11 @@
           Thông tin cá nhân
         </a>
         <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="/changePassword">
+          <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+          Đổi mật khẩu
+        </a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
           <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
           Đăng xuất
