--- a/views/login.hbs
+++ b/views/login.hbs
@@ -34,6 +34,9 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                   </div>
+                  <div class="alert alert-warning">
+                    <strong>Warning!</strong> Indicates a warning that might need attention.
+                  </div>
                   <form class="user" method="POST" action="/login">
                     <div class="form-group">
                       <input name="username" type="username" class="form-control form-control-user"
