--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -47,7 +47,7 @@
         </a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="/changePassword">
-          <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+          <i class="fas fa-unlock-alt fa-sm fa-fw mr-2 text-gray-400"></i>
           Đổi mật khẩu
         </a>
         <div class="dropdown-divider"></div>
