--- a/views/teacher/schedule.hbs
+++ b/views/teacher/schedule.hbs
@@ -2,50 +2,41 @@
     <div class="semester ml-2 mb-2">
         <p style="text-align:center; vertical-align:middle; line-height:2rem; color:black">Năm học: 2019-2020</p>
     </div>
-    <div class="semester ml-2 mb-2">
-        <p style="text-align:center; vertical-align:middle; line-height:2rem; color: black">Học kì: 2</p>
-    </div>
+    <form class="semester labelSemester ml-2 mb-2" action="" method="GET">
+        <div align="center">
+            <span>Học kì:</span>
+            <select class="semester" style="border: none; color:blanchedalmond" name="semester" onchange="this.form.submit();">
+                <option value="1">1</option>
+                <option value="2">2</option>
+            </select>
+        </div>
+    </form>
 </div>
-<div id="table">
-  <div class="row" id="days" >
-    <div class="day">TIẾT</div>
-    <div class="day">THỨ 2</div>
-    <div class="day">THỨ 3</div>
-    <div class="day">THỨ 4</div>
-    <div class="day">THỨ 5</div>
-    <div class="day">THỨ 6</div>
-  </div>
-  <div id="time">
-    <div class="hour">Tiết 1</div>
-    <div class="hour">Tiết 2</div>
-    <div class="hour">Tiết 3</div>
-    <div class="hour">Tiết 4</div>
-    <div class="hour">Tiết 5</div>
-    <div class="hour">Tiết 6</div>
-    <div class="hour">Tiết 7</div>
-    <div class="hour">Tiết 8</div>
-    <div class="hour">Tiết 9</div>
-    <div class="hour">Tiết 10</div>
-    <div class="hour">Tiết 11</div>
-    <div class="hour">Tiết 12</div>
-  </div>
-  <div id="board">
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
-  </div>
+<div class="card shadow mb-4">
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>TIẾT</th>
+                        <th>THỨ 2</th>
+                        <th>THỨ 3</th>
+                        <th>THỨ 4</th>
+                        <th>THỨ 5</th>
+                        <th>THỨ 6</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Toán</td>
+                        <td>Văn</td>
+                        <td>Toán</td>
+                        <td>Anh</td>
+                        <td>Lý</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
